{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 46,
  "lineage": "b786f157-60c0-7aad-28cc-9abb09c07a1a",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149736139555:security-group/sg-02517a1a04b5dd62b",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02517a1a04b5dd62b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "149736139555",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "useast1d_sg_default",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-0efa7a2d9d29daab8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-02bcbc68b8d05cd9e",
            "domain": "vpc",
            "id": "eipalloc-0daba3b9a14566698",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09ac3ec6b2f69dc8f",
            "private_dns": "ip-10-0-0-154.ec2.internal",
            "private_ip": "10.0.0.154",
            "public_dns": "ec2-54-156-147-77.compute-1.amazonaws.com",
            "public_ip": "54.156.147.77",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "useast1d_eip_0",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0721b7b712a065d81",
            "domain": "vpc",
            "id": "eipalloc-026ab3d47c13424f0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e1662a1d3eb088b3",
            "private_dns": "ip-10-0-1-33.ec2.internal",
            "private_ip": "10.0.1.33",
            "public_dns": "ec2-34-205-195-23.compute-1.amazonaws.com",
            "public_ip": "34.205.195.23",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "useast1d_eip_1",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-04d48c88e6f099f88",
            "domain": "vpc",
            "id": "eipalloc-03041a3ef8f3d6c82",
            "network_border_group": "us-east-1",
            "network_interface": "eni-083e98469ae7bae0f",
            "private_dns": "ip-10-0-2-137.ec2.internal",
            "private_ip": "10.0.2.137",
            "public_dns": "ec2-18-214-112-176.compute-1.amazonaws.com",
            "public_ip": "18.214.112.176",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "useast1d_eip_2",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149736139555:internet-gateway/igw-0aade3726bc049601",
            "id": "igw-0aade3726bc049601",
            "owner_id": "149736139555",
            "tags": {
              "Name": "useast1d_igw",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-0efa7a2d9d29daab8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0daba3b9a14566698",
            "id": "nat-04528e89ed10bc66c",
            "network_interface_id": "eni-09ac3ec6b2f69dc8f",
            "private_ip": "10.0.0.154",
            "public_ip": "54.156.147.77",
            "subnet_id": "subnet-0838d1015204182d2",
            "tags": {
              "Name": "useast1d_ngw_0",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-026ab3d47c13424f0",
            "id": "nat-05984f8be54e80bc2",
            "network_interface_id": "eni-0e1662a1d3eb088b3",
            "private_ip": "10.0.1.33",
            "public_ip": "34.205.195.23",
            "subnet_id": "subnet-0e25cfcfc0727eae0",
            "tags": {
              "Name": "useast1d_ngw_1",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03041a3ef8f3d6c82",
            "id": "nat-00b9395cbfb801793",
            "network_interface_id": "eni-083e98469ae7bae0f",
            "private_ip": "10.0.2.137",
            "public_ip": "18.214.112.176",
            "subnet_id": "subnet-0b796c5a78422e3c8",
            "tags": {
              "Name": "useast1d_ngw_2",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-027ca0b8b28c6804f",
            "owner_id": "149736139555",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04528e89ed10bc66c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "useast1d_rtb_private",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-0efa7a2d9d29daab8"
          },
          "dependencies": [
            "module.vpc.aws_eip.private",
            "module.vpc.aws_nat_gateway.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04fc70b8880064da2",
            "owner_id": "149736139555",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05984f8be54e80bc2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "useast1d_rtb_private",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-0efa7a2d9d29daab8"
          },
          "dependencies": [
            "module.vpc.aws_eip.private",
            "module.vpc.aws_nat_gateway.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-024200eeb08f2b709",
            "owner_id": "149736139555",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00b9395cbfb801793",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "useast1d_rtb_private",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-0efa7a2d9d29daab8"
          },
          "dependencies": [
            "module.vpc.aws_eip.private",
            "module.vpc.aws_nat_gateway.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "protected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ea64f1234c49b88b",
            "owner_id": "149736139555",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "useast1d_rtb_protected",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-0efa7a2d9d29daab8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-039fc1a6194374911",
            "owner_id": "149736139555",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "useast1d_rtb_protected",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-0efa7a2d9d29daab8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0050d84b4b8597d9f",
            "owner_id": "149736139555",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "useast1d_rtb_protected",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-0efa7a2d9d29daab8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-002953ce666fa227f",
            "owner_id": "149736139555",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aade3726bc049601",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "useast1d_rtb_public",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-0efa7a2d9d29daab8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e24c60971a2baa4d",
            "route_table_id": "rtb-027ca0b8b28c6804f",
            "subnet_id": "subnet-0a8aaec7eabe32241"
          },
          "dependencies": [
            "module.vpc.aws_eip.private",
            "module.vpc.aws_nat_gateway.private",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd10980659de41ac",
            "route_table_id": "rtb-04fc70b8880064da2",
            "subnet_id": "subnet-028c7dbe43105938f"
          },
          "dependencies": [
            "module.vpc.aws_eip.private",
            "module.vpc.aws_nat_gateway.private",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac623439fafe852e",
            "route_table_id": "rtb-024200eeb08f2b709",
            "subnet_id": "subnet-0ce7ee4761688d05e"
          },
          "dependencies": [
            "module.vpc.aws_eip.private",
            "module.vpc.aws_nat_gateway.private",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "protected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d9bffc65268b8e4",
            "route_table_id": "rtb-0ea64f1234c49b88b",
            "subnet_id": "subnet-09d5261d76dad3d25"
          },
          "dependencies": [
            "module.vpc.aws_route_table.protected",
            "module.vpc.aws_subnet.protected",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054a61aefc7fe7a38",
            "route_table_id": "rtb-039fc1a6194374911",
            "subnet_id": "subnet-05fd974c8142c6f05"
          },
          "dependencies": [
            "module.vpc.aws_route_table.protected",
            "module.vpc.aws_subnet.protected",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c39f90c74ae561d3",
            "route_table_id": "rtb-0050d84b4b8597d9f",
            "subnet_id": "subnet-0d6b626bbed6b7ea6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.protected",
            "module.vpc.aws_subnet.protected",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7f534b8e65a5c8f",
            "route_table_id": "rtb-002953ce666fa227f",
            "subnet_id": "subnet-0838d1015204182d2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0672817c0acf7f7a3",
            "route_table_id": "rtb-002953ce666fa227f",
            "subnet_id": "subnet-0e25cfcfc0727eae0"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067ffb18fc37a37c2",
            "route_table_id": "rtb-002953ce666fa227f",
            "subnet_id": "subnet-0b796c5a78422e3c8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149736139555:subnet/subnet-0a8aaec7eabe32241",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0a8aaec7eabe32241",
            "map_public_ip_on_launch": false,
            "owner_id": "149736139555",
            "tags": {
              "Name": "useast1d_private_0",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops",
              "tier": "private"
            },
            "vpc_id": "vpc-0efa7a2d9d29daab8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149736139555:subnet/subnet-028c7dbe43105938f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-028c7dbe43105938f",
            "map_public_ip_on_launch": false,
            "owner_id": "149736139555",
            "tags": {
              "Name": "useast1d_private_1",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops",
              "tier": "private"
            },
            "vpc_id": "vpc-0efa7a2d9d29daab8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149736139555:subnet/subnet-0ce7ee4761688d05e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0ce7ee4761688d05e",
            "map_public_ip_on_launch": false,
            "owner_id": "149736139555",
            "tags": {
              "Name": "useast1d_private_2",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops",
              "tier": "private"
            },
            "vpc_id": "vpc-0efa7a2d9d29daab8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "protected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149736139555:subnet/subnet-09d5261d76dad3d25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-09d5261d76dad3d25",
            "map_public_ip_on_launch": false,
            "owner_id": "149736139555",
            "tags": {
              "Name": "useast1d_protected_0",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-0efa7a2d9d29daab8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149736139555:subnet/subnet-05fd974c8142c6f05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-05fd974c8142c6f05",
            "map_public_ip_on_launch": false,
            "owner_id": "149736139555",
            "tags": {
              "Name": "useast1d_protected_1",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-0efa7a2d9d29daab8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149736139555:subnet/subnet-0d6b626bbed6b7ea6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.8.0/24",
            "id": "subnet-0d6b626bbed6b7ea6",
            "map_public_ip_on_launch": false,
            "owner_id": "149736139555",
            "tags": {
              "Name": "useast1d_protected_2",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-0efa7a2d9d29daab8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149736139555:subnet/subnet-0838d1015204182d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0838d1015204182d2",
            "map_public_ip_on_launch": true,
            "owner_id": "149736139555",
            "tags": {
              "Name": "useast1d_public_0",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops",
              "tier": "public"
            },
            "vpc_id": "vpc-0efa7a2d9d29daab8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149736139555:subnet/subnet-0e25cfcfc0727eae0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e25cfcfc0727eae0",
            "map_public_ip_on_launch": true,
            "owner_id": "149736139555",
            "tags": {
              "Name": "useast1d_public_1",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops",
              "tier": "public"
            },
            "vpc_id": "vpc-0efa7a2d9d29daab8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149736139555:subnet/subnet-0b796c5a78422e3c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0b796c5a78422e3c8",
            "map_public_ip_on_launch": true,
            "owner_id": "149736139555",
            "tags": {
              "Name": "useast1d_public_2",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops",
              "tier": "public"
            },
            "vpc_id": "vpc-0efa7a2d9d29daab8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149736139555:vpc/vpc-0efa7a2d9d29daab8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a4a64b2ff9b0a12e",
            "default_route_table_id": "rtb-0303634da5d7acd7e",
            "default_security_group_id": "sg-02517a1a04b5dd62b",
            "dhcp_options_id": "dopt-beacc2c4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0efa7a2d9d29daab8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0303634da5d7acd7e",
            "owner_id": "149736139555",
            "tags": {
              "Name": "useast1d_vpc",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            }
          }
        }
      ]
    }
  ]
}